--- a/site/routes_errors_runtime.templ
+++ b/site/routes_errors_runtime.templ
@@ -1,6 +1,7 @@
 package site
 
 import "strings"
+import "regexp"
 
 templ AttrValueRequired(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
@@ -72,6 +73,7 @@ templ CustomValidityInvalidExpression(name string, info *RuntimeErrorInfo) {
 
 templ ExecuteExpression(name string, info *RuntimeErrorInfo) {
 	{{
+		var isSignalRe = regexp.MustCompile("^(\\$\\S*) is not defined")
 		isSignalMatches := isSignalRe.FindAllStringSubmatch(info.Error, -1)
 	}}
 	@RuntimeErrorView(name, info) {
@@ -107,7 +109,19 @@ templ ExecuteExpression(name string, info *RuntimeErrorInfo) {
 	<div data-text="$foo.woof"></div>
 </div>`)
 		} else {
-			<p>An unknown error occurred while executing an expression.</p>
+			{{
+				var isUndefinedStringRe = regexp.MustCompile("^(\\S*) is not defined")
+				isStringMatches := isUndefinedStringRe.FindAllStringSubmatch(info.Error, -1)
+			}}
+			if len(isStringMatches) > 0 {
+				{{
+					stringMatch := isStringMatches[0][1]
+				}}
+				<p>The variable <code class="text-primary">{ stringMatch }</code> is not defined. Ensure that the variable has been defined or, if you intended it to be a string, that you wrap it in quotes.</p>
+				@sampleCode("Example", "html", `<div data-text="'foo'"></div>`)
+			} else {
+				<p>An unknown error occurred while executing an expression.</p>
+			}
 		}
 		@expressionDocs()
 	}
