fix animation test

--- a/site/routes_examples_animations.templ
+++ b/site/routes_examples_animations.templ
@@ -74,7 +74,7 @@ templ animationsColorThrob(fg, bg AnimationsColor) {
 }
 
 templ animationsRequestInFlight() {
-	<div id="request_in_flight" class="flex flex-col gap-4">
+	<div id="request_in_flight" class="flex flex-col gap-4" data-signals-fetching>
 		<div class="form-control">
 			<label class="label label-text">Name</label>
 			<div class="flex items-center gap-2">
