Add videos [deploy-site]

--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -108,6 +108,13 @@ templ Home() {
 						Discuss on Discord
 					</a>
 					<a
+						class="flex items-center justify-center flex-1 btn bg-youtube"
+						href="https://www.youtube.com/@data-star"
+					>
+						@icon("simple-icons:youtube")
+						Watch the Videos
+					</a>
+					<a
 						class="flex items-center justify-center flex-1 btn bg-github"
 						href="https://github.com/starfederation/datastar/tree/main/library"
 					>
