--- a/site/routes_examples_bulk_update.templ
+++ b/site/routes_examples_bulk_update.templ
@@ -62,8 +62,8 @@ templ bulkUpdateContacts(signals *BulkUpdateSelectionSignals, contacts []*Contac
 		<div class="flex gap-2">
 			<button
 				data-on-click="
-					@put('/examples/bulk_update/data/activate')
-					$selections.all = false
+					@put('/examples/bulk_update/data/activate');
+					$selections.all = false;
 					@setAll('selections.contact_', $selections.all)
 				"
 				class="btn btn-success"
@@ -73,8 +73,8 @@ templ bulkUpdateContacts(signals *BulkUpdateSelectionSignals, contacts []*Contac
 			</button>
 			<button
 				data-on-click="
-					@put('/examples/bulk_update/data/deactivate')
-					$selections.all = false
+					@put('/examples/bulk_update/data/deactivate');
+					$selections.all = false;
 					@setAll('selections.contact_', $selections.all)
 				"
 				class="btn btn-error"
