Improve SDK docs

--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -58,7 +58,7 @@ templ Home() {
 					<span class="text-lg font-bold text-primary">
 						{ humanize.CommafWithDigits( datastar.VersionClientByteSizeGzip / 1024.0, 1) } KiB
 					</span>
-					file and start adding reactivity to your frontend immediately. Write your backend in the language of your choice!  Official <a href="/reference/sdks" class="text-primary">SDKs</a> are available to help you get up and running even faster, with more languages on the way.
+					file and start adding reactivity to your frontend immediately. Write your backend in the language of your choice!  Official <a href="/reference/sdks" class="font-bold text-primary">SDKs</a> are available to help you get up and running even faster, with more languages on the way.
 					<div class="flex flex-wrap justify-center gap-8 mx-auto">
 						for _, lang := range build.Consts.SDKLanguages {
 							<a href={ templ.SafeURL(lang.SdkUrl) } class="flex flex-col justify-center items-center">
