--- a/site/routes_errors_runtime.templ
+++ b/site/routes_errors_runtime.templ
@@ -59,7 +59,7 @@ templ ComputedValueRequired(name string, info *RuntimeErrorInfo) {
 
 templ CustomValidityInvalidElement(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
-		<p>The <code>data-custom-validity</code> attribute was used on an element that is not a <code>HTMLInputElement</code>. The <code>data-custom-validity</code> attribute can only be used on form elements.</p>
+		<p>The <code>data-custom-validity</code> attribute was used on an element that is not a <code>HTMLInputElement</code> or a <code>HTMLTextAreaElement</code>. The <code>data-custom-validity</code> attribute can only be used on input and textarea elements.</p>
 		@customValidityError()
 	}
 }
