Fix element check in `custom-validity` plugin (#544)
* Fix hello world source

* Fix element check in `custom-validity` plugin

* Add HTMLSelectElement

* Update release note

--- a/site/routes_errors_runtime.templ
+++ b/site/routes_errors_runtime.templ
@@ -59,7 +59,7 @@ templ ComputedValueRequired(name string, info *RuntimeErrorInfo) {
 
 templ CustomValidityInvalidElement(name string, info *RuntimeErrorInfo) {
 	@RuntimeErrorView(name, info) {
-		<p>The <code>data-custom-validity</code> attribute was used on an element that is not a <code>HTMLInputElement</code>. The <code>data-custom-validity</code> attribute can only be used on form elements.</p>
+		<p>The <code>data-custom-validity</code> attribute was used on an element that is not a <code>HTMLInputElement</code>, <code>HTMLSelectElement</code> or <code>HTMLTextAreaElement</code>. The <code>data-custom-validity</code> attribute can only be used on input, select and textarea elements.</p>
 		@customValidityError()
 	}
 }
