--- a/site/shared.templ
+++ b/site/shared.templ
@@ -114,8 +114,10 @@ type SearchResult struct {
 	Fragment string `json:"fragment"`
 }
 
-templ SiteSearch(signals *SiteSearchSignals, searchResults []SearchResult) {
-	<div id="site_search" data-signals={templ.JSONString(signals)} class="w-full">
+const SearchFromHeaderKey = "X-Search-From-Header"
+
+templ SiteSearch(signals *SiteSearchSignals, searchResults []SearchResult, fromHeader bool) {
+	<div data-signals={templ.JSONString(signals)} class="w-full">
 		<div class="flex flex-nowrap w-full">
 			<input 
 				id="site_search_input" 
@@ -124,7 +126,8 @@ templ SiteSearch(signals *SiteSearchSignals, searchResults []SearchResult) {
 				placeholder="Search..."
 				data-bind="siteSearch"
 				data-on-input__debounce.300ms={ fmt.Sprintf(
-					"$siteSearch.length > 1 && %s", datastar.GetSSE("/api/search"),
+    				"$siteSearch.length > 1 && @get('/api/search', %s)", 
+   					 fmt.Sprintf(`{"headers": {"%s": "%t"}}`, SearchFromHeaderKey, fromHeader),
 				)}
 				data-indicator="$searchFetching"
 			/>
@@ -161,6 +164,27 @@ templ SiteSearch(signals *SiteSearchSignals, searchResults []SearchResult) {
 	</div>
 }
 
+templ HeaderSiteSearch(signals *SiteSearchSignals, searchResults []SearchResult) {
+	<div id="header_site_search" class="hidden lg:flex lg:gap-4 relative z-10">
+		@SiteSearch(&SiteSearchSignals{
+			Search: signals.Search,
+			SearchFetching: signals.SearchFetching,
+			OpenSearchResults: signals.OpenSearchResults,
+		}, searchResults, true)
+	</div>
+}
+
+templ DrawerSiteSearch(signals *SiteSearchSignals, searchResults []SearchResult) {
+	<div id="drawer_site_search" class="flex lg:hidden z-10 p-4 w-80">
+		@SiteSearch(&SiteSearchSignals{
+			Search: signals.Search, 
+			SearchFetching: signals.SearchFetching,
+			OpenSearchResults: signals.OpenSearchResults,
+		}, searchResults, false)
+	</div>
+}
+
+
 templ header(r *http.Request) {
 	<div class="navbar bg-base-200">
 		<div class="flex justify-between w-full gap-4">
@@ -177,9 +201,7 @@ templ header(r *http.Request) {
 			<div class="hidden lg:text-md lg:text-lg lg:flex lg:gap-4 lg:visible ">
 				@headerTopLevelLinks(r)
 			</div>
-			<div class="hidden lg:flex lg:gap-4 relative z-10">
-				@SiteSearch(&SiteSearchSignals{SearchFetching: false}, []SearchResult{})
-			</div>
+			@HeaderSiteSearch(&SiteSearchSignals{SearchFetching: false}, []SearchResult{})
 			<div class="hidden text-xl lg:flex lg:gap-4 lg:visible">
 				@headerExternalLinks()
 			</div>
@@ -228,9 +250,7 @@ templ SidebarPage(
 			</div>
 			<aside class="drawer-side">
 				<label for="sidebar-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-				<div id="mobile_site_search" class="flex lg:hidden z-10 p-4 w-80">
-					@SiteSearch(&SiteSearchSignals{SearchFetching: false}, []SearchResult{})
-				</div>
+				@DrawerSiteSearch(&SiteSearchSignals{SearchFetching: false}, []SearchResult{})
 				<ul class="min-h-full pt-8 px-4 menu w-80 bg-base-300 text-base-content">
 					@SidebarContents(sidebarGroups, current)
 				</ul>
